--- a/basicsr/data/meta_info/vox-312.ipynb
+++ b/basicsr/data/meta_info/vox-312.ipynb
@@ -50,6 +50,7 @@
    "outputs": [],
    "source": [
     "count =0\n",
+    "all_id = glob.glob('/data2/wei/vox-320/GT/*')\n",
     "for p_id in all_id:\n",
     "    flow_78 = glob.glob(p_id + '/*/flow_80.npy')\n",
     "    rand= random.random()\n",
@@ -62,26 +63,45 @@
     "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')\n",
     "        else:    \n",
     "            with open('vox_320_test.txt','a+') as f:\n",
-    "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')\n",
-    "    count+=1"
+    "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "47605\n"
      ]
     }
    ],
    "source": [
-    "all_id = glob.glob('/data2/wei/vox-320/GT/*/*/flow_80.npy')\n",
+    "all_id = glob.glob('/data2/wei/vox-320/GT/*/*/flow.npy')\n",
     "print(len(all_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "514"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_id)"
    ]
   },
   {
