--- a/flow_save_160/vis.ipynb
+++ b/flow_save_160/vis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
     "    bgr = cv2.cvtColor(hsv,cv2.COLOR_HSV2BGR)\n",
     "    cv2.imwrite('mask.png',bgr)\n",
     "def get_flow(flow,pic_index):\n",
-    "    flow = flow [0,pic_index]\n",
-    "    flow = flow.mean(axis=0)\n",
+    "    flow = flow [0,pic_index,0]\n",
+    "    #flow = flow.mean(axis=0)\n",
     "    flow = flow.reshape(8,18,160,160)\n",
     "    flow = flow.mean(axis=0)\n",
     "#     flow_x = flow[::2,:,:].mean(axis=0)\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,22 +74,25 @@
     "mask = np.load('mask.npy')\n",
     "#gt = np.load('/data2/wei/vox-160/GT/id06060/lwF1jB7DnMo/flow_160.npy')\n",
     "\n",
-    "gt = np.load('/data2/wei/vox-160/GT/id00060/jKqs7j3iRxo/flow_160.npy')"
+    "#gt = np.load('/data2/wei/vox-160/GT/id00060/jKqs7j3iRxo/flow_160.npy')\n",
+    "\n",
+    "gt = np.load('/data2/wei/vox-160/GT/id00741/_672LB5TsX4/flow_160.npy')\n",
+    "#gt = np.load('/data2/wei/vox-160/GT/id00741/8XrTdMGunzg/flow_160.npy')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.30575103 -0.19586082\n",
+      "1.4681131 -1.3879445\n",
       "(160, 160)\n",
       "(160, 160)\n",
-      "-0.49255859375 0.6090234375\n"
+      "-0.55443359375 0.33716796875\n"
      ]
     }
    ],
@@ -101,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 7, 2, 72, 160, 160)"
+       "(1, 7, 1, 72, 160, 160)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14.542989"
+       "18.357046"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,42 +145,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.5336802455357144"
+       "(1, 7, 2, 144, 160, 160)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abs(gt).mean()"
+    "flow.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function ndarray.mean>"
+       "(1, 7, 2, 144, 160, 160)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flow.mean"
+    "flow.shape"
    ]
   },
   {
