--- a/basicsr/data/meta_info/Get_IJB.ipynb
+++ b/basicsr/data/meta_info/Get_IJB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,21 +23,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# count =0\n",
+    "# all_id = glob.glob('/data2/wei/IJB-320/160/*')\n",
+    "# for p_id in all_id:\n",
+    "#     flow_78 = glob.glob(p_id + '/*/im4.png')\n",
+    "#     rand= random.random()\n",
+    "#     for seq in flow_78:\n",
+    "#         p_id = p_id.split('/')[-1]\n",
+    "#         p_seq = seq.split('/')[-2]\n",
+    "#         if(rand<0):\n",
+    "            \n",
+    "#             with open('IJB_320_train.txt','a+') as f:\n",
+    "#                 f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')\n",
+    "#         else:    \n",
+    "#             with open('IJB_320_test.txt','a+') as f:\n",
+    "#                 f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "count =0\n",
-    "all_id = glob.glob('/data2/wei/IJB-320/GT/*')\n",
+    "all_id = glob.glob('/data2/wei/IJB-160/GT/*')\n",
     "for p_id in all_id:\n",
     "    flow_78 = glob.glob(p_id + '/*/im4.png')\n",
     "    rand= random.random()\n",
     "    for seq in flow_78:\n",
     "        p_id = p_id.split('/')[-1]\n",
     "        p_seq = seq.split('/')[-2]\n",
-    "        if(rand<0):\n",
+    "        if False:\n",
     "            \n",
     "            with open('IJB_320_train.txt','a+') as f:\n",
     "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')\n",
     "        else:    \n",
-    "            with open('IJB_320_test.txt','a+') as f:\n",
-    "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')"
+    "            with open('IJB_ori_test.txt','a+') as f:\n",
+    "                f.write(p_id+'/'+p_seq + ' 7 (160,160,3)\\r\\n')"
    ]
   },
   {
