--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -319,6 +319,433 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "pthfile = 'arcfacemodel/model_ir_se50.pth' #faster_rcnn_ckpt.pth\n",
+    "net = torch.load(pthfile) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-db30e9b4f940>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"model\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'model'"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in net[\"model\"].items():\n",
+    "    print(key,value.size(),sep=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "343"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_pth_name= '/home/chen/.cache/torch/checkpoints/resnet50-19c8e357.pth'\n",
+    "        pretrain_dict = torch.load( load_pth_name,map_location=lambda storage, loc: storage)\n",
+    "        # conv1_weight_new=np.zeros( (64,5,7,7) )\n",
+    "        # conv1_weight_new[:,:3,:,:]=pretrain_dict['conv1.weight'].cpu().data\n",
+    "        # pretrain_dict['conv1.weight']=torch.from_numpy(conv1_weight_new  )\n",
+    "        state_dict = model.state_dict()\n",
+    "        model_dict = state_dict\n",
+    "        for k, v in pretrain_dict.items():\n",
+    "            # kk='backbone.'+k\n",
+    "            kk = k\n",
+    "            if kk in state_dict:\n",
+    "                model_dict[kk] = v\n",
+    "        state_dict.update(model_dict)\n",
+    "        model.load_state_dict(state_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_layer.0.weight\n",
+      "input_layer.1.weight\n",
+      "input_layer.1.bias\n",
+      "input_layer.1.running_mean\n",
+      "input_layer.1.running_var\n",
+      "input_layer.2.weight\n",
+      "output_layer.0.weight\n",
+      "output_layer.0.bias\n",
+      "output_layer.0.running_mean\n",
+      "output_layer.0.running_var\n",
+      "output_layer.3.weight\n",
+      "output_layer.3.bias\n",
+      "output_layer.4.weight\n",
+      "output_layer.4.bias\n",
+      "output_layer.4.running_mean\n",
+      "output_layer.4.running_var\n",
+      "body.0.res_layer.0.weight\n",
+      "body.0.res_layer.0.bias\n",
+      "body.0.res_layer.0.running_mean\n",
+      "body.0.res_layer.0.running_var\n",
+      "body.0.res_layer.1.weight\n",
+      "body.0.res_layer.2.weight\n",
+      "body.0.res_layer.3.weight\n",
+      "body.0.res_layer.4.weight\n",
+      "body.0.res_layer.4.bias\n",
+      "body.0.res_layer.4.running_mean\n",
+      "body.0.res_layer.4.running_var\n",
+      "body.0.res_layer.5.fc1.weight\n",
+      "body.0.res_layer.5.fc2.weight\n",
+      "body.1.res_layer.0.weight\n",
+      "body.1.res_layer.0.bias\n",
+      "body.1.res_layer.0.running_mean\n",
+      "body.1.res_layer.0.running_var\n",
+      "body.1.res_layer.1.weight\n",
+      "body.1.res_layer.2.weight\n",
+      "body.1.res_layer.3.weight\n",
+      "body.1.res_layer.4.weight\n",
+      "body.1.res_layer.4.bias\n",
+      "body.1.res_layer.4.running_mean\n",
+      "body.1.res_layer.4.running_var\n",
+      "body.1.res_layer.5.fc1.weight\n",
+      "body.1.res_layer.5.fc2.weight\n",
+      "body.2.res_layer.0.weight\n",
+      "body.2.res_layer.0.bias\n",
+      "body.2.res_layer.0.running_mean\n",
+      "body.2.res_layer.0.running_var\n",
+      "body.2.res_layer.1.weight\n",
+      "body.2.res_layer.2.weight\n",
+      "body.2.res_layer.3.weight\n",
+      "body.2.res_layer.4.weight\n",
+      "body.2.res_layer.4.bias\n",
+      "body.2.res_layer.4.running_mean\n",
+      "body.2.res_layer.4.running_var\n",
+      "body.2.res_layer.5.fc1.weight\n",
+      "body.2.res_layer.5.fc2.weight\n",
+      "body.3.shortcut_layer.0.weight\n",
+      "body.3.shortcut_layer.1.weight\n",
+      "body.3.shortcut_layer.1.bias\n",
+      "body.3.shortcut_layer.1.running_mean\n",
+      "body.3.shortcut_layer.1.running_var\n",
+      "body.3.res_layer.0.weight\n",
+      "body.3.res_layer.0.bias\n",
+      "body.3.res_layer.0.running_mean\n",
+      "body.3.res_layer.0.running_var\n",
+      "body.3.res_layer.1.weight\n",
+      "body.3.res_layer.2.weight\n",
+      "body.3.res_layer.3.weight\n",
+      "body.3.res_layer.4.weight\n",
+      "body.3.res_layer.4.bias\n",
+      "body.3.res_layer.4.running_mean\n",
+      "body.3.res_layer.4.running_var\n",
+      "body.3.res_layer.5.fc1.weight\n",
+      "body.3.res_layer.5.fc2.weight\n",
+      "body.4.res_layer.0.weight\n",
+      "body.4.res_layer.0.bias\n",
+      "body.4.res_layer.0.running_mean\n",
+      "body.4.res_layer.0.running_var\n",
+      "body.4.res_layer.1.weight\n",
+      "body.4.res_layer.2.weight\n",
+      "body.4.res_layer.3.weight\n",
+      "body.4.res_layer.4.weight\n",
+      "body.4.res_layer.4.bias\n",
+      "body.4.res_layer.4.running_mean\n",
+      "body.4.res_layer.4.running_var\n",
+      "body.4.res_layer.5.fc1.weight\n",
+      "body.4.res_layer.5.fc2.weight\n",
+      "body.5.res_layer.0.weight\n",
+      "body.5.res_layer.0.bias\n",
+      "body.5.res_layer.0.running_mean\n",
+      "body.5.res_layer.0.running_var\n",
+      "body.5.res_layer.1.weight\n",
+      "body.5.res_layer.2.weight\n",
+      "body.5.res_layer.3.weight\n",
+      "body.5.res_layer.4.weight\n",
+      "body.5.res_layer.4.bias\n",
+      "body.5.res_layer.4.running_mean\n",
+      "body.5.res_layer.4.running_var\n",
+      "body.5.res_layer.5.fc1.weight\n",
+      "body.5.res_layer.5.fc2.weight\n",
+      "body.6.res_layer.0.weight\n",
+      "body.6.res_layer.0.bias\n",
+      "body.6.res_layer.0.running_mean\n",
+      "body.6.res_layer.0.running_var\n",
+      "body.6.res_layer.1.weight\n",
+      "body.6.res_layer.2.weight\n",
+      "body.6.res_layer.3.weight\n",
+      "body.6.res_layer.4.weight\n",
+      "body.6.res_layer.4.bias\n",
+      "body.6.res_layer.4.running_mean\n",
+      "body.6.res_layer.4.running_var\n",
+      "body.6.res_layer.5.fc1.weight\n",
+      "body.6.res_layer.5.fc2.weight\n",
+      "body.7.shortcut_layer.0.weight\n",
+      "body.7.shortcut_layer.1.weight\n",
+      "body.7.shortcut_layer.1.bias\n",
+      "body.7.shortcut_layer.1.running_mean\n",
+      "body.7.shortcut_layer.1.running_var\n",
+      "body.7.res_layer.0.weight\n",
+      "body.7.res_layer.0.bias\n",
+      "body.7.res_layer.0.running_mean\n",
+      "body.7.res_layer.0.running_var\n",
+      "body.7.res_layer.1.weight\n",
+      "body.7.res_layer.2.weight\n",
+      "body.7.res_layer.3.weight\n",
+      "body.7.res_layer.4.weight\n",
+      "body.7.res_layer.4.bias\n",
+      "body.7.res_layer.4.running_mean\n",
+      "body.7.res_layer.4.running_var\n",
+      "body.7.res_layer.5.fc1.weight\n",
+      "body.7.res_layer.5.fc2.weight\n",
+      "body.8.res_layer.0.weight\n",
+      "body.8.res_layer.0.bias\n",
+      "body.8.res_layer.0.running_mean\n",
+      "body.8.res_layer.0.running_var\n",
+      "body.8.res_layer.1.weight\n",
+      "body.8.res_layer.2.weight\n",
+      "body.8.res_layer.3.weight\n",
+      "body.8.res_layer.4.weight\n",
+      "body.8.res_layer.4.bias\n",
+      "body.8.res_layer.4.running_mean\n",
+      "body.8.res_layer.4.running_var\n",
+      "body.8.res_layer.5.fc1.weight\n",
+      "body.8.res_layer.5.fc2.weight\n",
+      "body.9.res_layer.0.weight\n",
+      "body.9.res_layer.0.bias\n",
+      "body.9.res_layer.0.running_mean\n",
+      "body.9.res_layer.0.running_var\n",
+      "body.9.res_layer.1.weight\n",
+      "body.9.res_layer.2.weight\n",
+      "body.9.res_layer.3.weight\n",
+      "body.9.res_layer.4.weight\n",
+      "body.9.res_layer.4.bias\n",
+      "body.9.res_layer.4.running_mean\n",
+      "body.9.res_layer.4.running_var\n",
+      "body.9.res_layer.5.fc1.weight\n",
+      "body.9.res_layer.5.fc2.weight\n",
+      "body.10.res_layer.0.weight\n",
+      "body.10.res_layer.0.bias\n",
+      "body.10.res_layer.0.running_mean\n",
+      "body.10.res_layer.0.running_var\n",
+      "body.10.res_layer.1.weight\n",
+      "body.10.res_layer.2.weight\n",
+      "body.10.res_layer.3.weight\n",
+      "body.10.res_layer.4.weight\n",
+      "body.10.res_layer.4.bias\n",
+      "body.10.res_layer.4.running_mean\n",
+      "body.10.res_layer.4.running_var\n",
+      "body.10.res_layer.5.fc1.weight\n",
+      "body.10.res_layer.5.fc2.weight\n",
+      "body.11.res_layer.0.weight\n",
+      "body.11.res_layer.0.bias\n",
+      "body.11.res_layer.0.running_mean\n",
+      "body.11.res_layer.0.running_var\n",
+      "body.11.res_layer.1.weight\n",
+      "body.11.res_layer.2.weight\n",
+      "body.11.res_layer.3.weight\n",
+      "body.11.res_layer.4.weight\n",
+      "body.11.res_layer.4.bias\n",
+      "body.11.res_layer.4.running_mean\n",
+      "body.11.res_layer.4.running_var\n",
+      "body.11.res_layer.5.fc1.weight\n",
+      "body.11.res_layer.5.fc2.weight\n",
+      "body.12.res_layer.0.weight\n",
+      "body.12.res_layer.0.bias\n",
+      "body.12.res_layer.0.running_mean\n",
+      "body.12.res_layer.0.running_var\n",
+      "body.12.res_layer.1.weight\n",
+      "body.12.res_layer.2.weight\n",
+      "body.12.res_layer.3.weight\n",
+      "body.12.res_layer.4.weight\n",
+      "body.12.res_layer.4.bias\n",
+      "body.12.res_layer.4.running_mean\n",
+      "body.12.res_layer.4.running_var\n",
+      "body.12.res_layer.5.fc1.weight\n",
+      "body.12.res_layer.5.fc2.weight\n",
+      "body.13.res_layer.0.weight\n",
+      "body.13.res_layer.0.bias\n",
+      "body.13.res_layer.0.running_mean\n",
+      "body.13.res_layer.0.running_var\n",
+      "body.13.res_layer.1.weight\n",
+      "body.13.res_layer.2.weight\n",
+      "body.13.res_layer.3.weight\n",
+      "body.13.res_layer.4.weight\n",
+      "body.13.res_layer.4.bias\n",
+      "body.13.res_layer.4.running_mean\n",
+      "body.13.res_layer.4.running_var\n",
+      "body.13.res_layer.5.fc1.weight\n",
+      "body.13.res_layer.5.fc2.weight\n",
+      "body.14.res_layer.0.weight\n",
+      "body.14.res_layer.0.bias\n",
+      "body.14.res_layer.0.running_mean\n",
+      "body.14.res_layer.0.running_var\n",
+      "body.14.res_layer.1.weight\n",
+      "body.14.res_layer.2.weight\n",
+      "body.14.res_layer.3.weight\n",
+      "body.14.res_layer.4.weight\n",
+      "body.14.res_layer.4.bias\n",
+      "body.14.res_layer.4.running_mean\n",
+      "body.14.res_layer.4.running_var\n",
+      "body.14.res_layer.5.fc1.weight\n",
+      "body.14.res_layer.5.fc2.weight\n",
+      "body.15.res_layer.0.weight\n",
+      "body.15.res_layer.0.bias\n",
+      "body.15.res_layer.0.running_mean\n",
+      "body.15.res_layer.0.running_var\n",
+      "body.15.res_layer.1.weight\n",
+      "body.15.res_layer.2.weight\n",
+      "body.15.res_layer.3.weight\n",
+      "body.15.res_layer.4.weight\n",
+      "body.15.res_layer.4.bias\n",
+      "body.15.res_layer.4.running_mean\n",
+      "body.15.res_layer.4.running_var\n",
+      "body.15.res_layer.5.fc1.weight\n",
+      "body.15.res_layer.5.fc2.weight\n",
+      "body.16.res_layer.0.weight\n",
+      "body.16.res_layer.0.bias\n",
+      "body.16.res_layer.0.running_mean\n",
+      "body.16.res_layer.0.running_var\n",
+      "body.16.res_layer.1.weight\n",
+      "body.16.res_layer.2.weight\n",
+      "body.16.res_layer.3.weight\n",
+      "body.16.res_layer.4.weight\n",
+      "body.16.res_layer.4.bias\n",
+      "body.16.res_layer.4.running_mean\n",
+      "body.16.res_layer.4.running_var\n",
+      "body.16.res_layer.5.fc1.weight\n",
+      "body.16.res_layer.5.fc2.weight\n",
+      "body.17.res_layer.0.weight\n",
+      "body.17.res_layer.0.bias\n",
+      "body.17.res_layer.0.running_mean\n",
+      "body.17.res_layer.0.running_var\n",
+      "body.17.res_layer.1.weight\n",
+      "body.17.res_layer.2.weight\n",
+      "body.17.res_layer.3.weight\n",
+      "body.17.res_layer.4.weight\n",
+      "body.17.res_layer.4.bias\n",
+      "body.17.res_layer.4.running_mean\n",
+      "body.17.res_layer.4.running_var\n",
+      "body.17.res_layer.5.fc1.weight\n",
+      "body.17.res_layer.5.fc2.weight\n",
+      "body.18.res_layer.0.weight\n",
+      "body.18.res_layer.0.bias\n",
+      "body.18.res_layer.0.running_mean\n",
+      "body.18.res_layer.0.running_var\n",
+      "body.18.res_layer.1.weight\n",
+      "body.18.res_layer.2.weight\n",
+      "body.18.res_layer.3.weight\n",
+      "body.18.res_layer.4.weight\n",
+      "body.18.res_layer.4.bias\n",
+      "body.18.res_layer.4.running_mean\n",
+      "body.18.res_layer.4.running_var\n",
+      "body.18.res_layer.5.fc1.weight\n",
+      "body.18.res_layer.5.fc2.weight\n",
+      "body.19.res_layer.0.weight\n",
+      "body.19.res_layer.0.bias\n",
+      "body.19.res_layer.0.running_mean\n",
+      "body.19.res_layer.0.running_var\n",
+      "body.19.res_layer.1.weight\n",
+      "body.19.res_layer.2.weight\n",
+      "body.19.res_layer.3.weight\n",
+      "body.19.res_layer.4.weight\n",
+      "body.19.res_layer.4.bias\n",
+      "body.19.res_layer.4.running_mean\n",
+      "body.19.res_layer.4.running_var\n",
+      "body.19.res_layer.5.fc1.weight\n",
+      "body.19.res_layer.5.fc2.weight\n",
+      "body.20.res_layer.0.weight\n",
+      "body.20.res_layer.0.bias\n",
+      "body.20.res_layer.0.running_mean\n",
+      "body.20.res_layer.0.running_var\n",
+      "body.20.res_layer.1.weight\n",
+      "body.20.res_layer.2.weight\n",
+      "body.20.res_layer.3.weight\n",
+      "body.20.res_layer.4.weight\n",
+      "body.20.res_layer.4.bias\n",
+      "body.20.res_layer.4.running_mean\n",
+      "body.20.res_layer.4.running_var\n",
+      "body.20.res_layer.5.fc1.weight\n",
+      "body.20.res_layer.5.fc2.weight\n",
+      "body.21.shortcut_layer.0.weight\n",
+      "body.21.shortcut_layer.1.weight\n",
+      "body.21.shortcut_layer.1.bias\n",
+      "body.21.shortcut_layer.1.running_mean\n",
+      "body.21.shortcut_layer.1.running_var\n",
+      "body.21.res_layer.0.weight\n",
+      "body.21.res_layer.0.bias\n",
+      "body.21.res_layer.0.running_mean\n",
+      "body.21.res_layer.0.running_var\n",
+      "body.21.res_layer.1.weight\n",
+      "body.21.res_layer.2.weight\n",
+      "body.21.res_layer.3.weight\n",
+      "body.21.res_layer.4.weight\n",
+      "body.21.res_layer.4.bias\n",
+      "body.21.res_layer.4.running_mean\n",
+      "body.21.res_layer.4.running_var\n",
+      "body.21.res_layer.5.fc1.weight\n",
+      "body.21.res_layer.5.fc2.weight\n",
+      "body.22.res_layer.0.weight\n",
+      "body.22.res_layer.0.bias\n",
+      "body.22.res_layer.0.running_mean\n",
+      "body.22.res_layer.0.running_var\n",
+      "body.22.res_layer.1.weight\n",
+      "body.22.res_layer.2.weight\n",
+      "body.22.res_layer.3.weight\n",
+      "body.22.res_layer.4.weight\n",
+      "body.22.res_layer.4.bias\n",
+      "body.22.res_layer.4.running_mean\n",
+      "body.22.res_layer.4.running_var\n",
+      "body.22.res_layer.5.fc1.weight\n",
+      "body.22.res_layer.5.fc2.weight\n",
+      "body.23.res_layer.0.weight\n",
+      "body.23.res_layer.0.bias\n",
+      "body.23.res_layer.0.running_mean\n",
+      "body.23.res_layer.0.running_var\n",
+      "body.23.res_layer.1.weight\n",
+      "body.23.res_layer.2.weight\n",
+      "body.23.res_layer.3.weight\n",
+      "body.23.res_layer.4.weight\n",
+      "body.23.res_layer.4.bias\n",
+      "body.23.res_layer.4.running_mean\n",
+      "body.23.res_layer.4.running_var\n",
+      "body.23.res_layer.5.fc1.weight\n",
+      "body.23.res_layer.5.fc2.weight\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in net.keys():\n",
+    "    print(k) # 查看四个键，分别是 model,optimizer,scheduler,iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -327,9 +754,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:arc]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-arc-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -341,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
