--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -36,25 +36,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn import Linear, Conv2d, BatchNorm1d, BatchNorm2d, PReLU, ReLU, Sigmoid, Dropout2d, Dropout, AvgPool2d, MaxPool2d, AdaptiveAvgPool2d, Sequential, Module, Parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_layer = Sequential(Conv2d(3, 64, (3, 3), 1, 1 ,bias=False), \n",
+    "                              BatchNorm2d(64), \n",
+    "                              PReLU(64))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=torch.ones(10).reshape(2,5)\n",
+    "b=torch.ones(10).reshape(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[1.0000e+00, 2.7183e+00, 7.3891e+00, 2.0086e+01],\n",
-       "         [5.4598e+01, 1.4841e+02, 4.0343e+02, 1.0966e+03],\n",
-       "         [2.9810e+03, 8.1031e+03, 2.2026e+04, 5.9874e+04],\n",
-       "         [1.6275e+05, 4.4241e+05, 1.2026e+06, 3.2690e+06]]])"
+       "tensor([5., 5.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.exp(a.float())"
+    "torch.sum(a*b,1)"
    ]
   },
   {
