--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -820,6 +820,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./w_offset_320.log 0\n",
+      "./test.log 0\n",
+      "./arcfacemodel 2\n",
+      "./bashrc 0\n",
+      "./train_upsample_baseline_80000.log 0\n",
+      "./train_320_16.log 0\n",
+      "./options 3\n",
+      "./train_upsample_offset_40.log 0\n",
+      "./setup.cfg 0\n",
+      "./tb_logger 372\n",
+      "./VERSION 0\n",
+      "./train_upsample_weight_2w.log 0\n",
+      "./wo_offset_320.log 0\n",
+      "./train_upsample_fix.log 0\n",
+      "./train_upsample_baseline_without_mask.log 0\n",
+      "./tests 10\n",
+      "./make.sh 0\n",
+      "./visualization 14\n",
+      "./build 4\n",
+      "./psnr_log 9\n",
+      "./vv 1\n",
+      "./basicsr.egg-info 6\n",
+      "./experiments 173\n",
+      "./setup.py 0\n",
+      "./train_turnover.log 0\n",
+      "./README_CN.md 0\n",
+      "./train_upsample_gt.log 0\n",
+      "./train_160_wo_def_conv.log 0\n",
+      "./train_upsample_with_offset_loss_1.log 0\n",
+      "./train_upsample_first_offset.log 0\n",
+      "./train_upsample_weight.log 0\n",
+      "./docs 18\n",
+      "./LICENSE 4\n",
+      "./train_ori_offset.log 0\n",
+      "./12.txt 0\n",
+      "./__init__.py 0\n",
+      "./basicsr 8\n",
+      "./train_upsample_offset_5_without_mask.log 0\n",
+      "./offset_0_train.log 0\n",
+      "./i 0\n",
+      "./flow_save_160 4\n",
+      "./train_without_pcd.log 0\n",
+      "./README.md 0\n",
+      "./train_upsample_without_deformable.log 0\n",
+      "./assets 2\n",
+      "./train_upsample_baseline.log 0\n",
+      "./train_upsample_test_nvidia.log 0\n",
+      "./results 42\n",
+      "./train_upsample_with_offset_loss100.log 0\n",
+      "./train_upsample_with_offset.log 0\n",
+      "./w_100_offset_320.log 0\n",
+      "./log_ori 50\n",
+      "./train_upsample_with_offset_loss_5.log 0\n",
+      "./scripts 12\n",
+      "./train_160_w_offset_loss.log 0\n",
+      "./train_160_160.log 0\n",
+      "./train_test.log 0\n",
+      "./train_upsample_last_offset.log 0\n",
+      "./order.txt 0\n",
+      "./test_nvidia.log 0\n",
+      "./Untitled.ipynb 0\n",
+      "./train_160_baseline.log 0\n",
+      "./test_name.log 0\n",
+      "./requirements.txt 0\n",
+      "./flow_save 2\n",
+      "./train_offset_10.log 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = glob.glob('./*')\n",
+    "for w in a:\n",
+    "    glob_a = glob.glob(w+'/*')\n",
+    "    print(w,len(glob_a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
