--- a/basicsr/data/meta_info/vox-312.ipynb
+++ b/basicsr/data/meta_info/vox-312.ipynb
@@ -45,25 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
+    "import random\n",
     "count =0\n",
-    "all_id = glob.glob('/data2/wei/vox-320/GT/*')\n",
+    "all_id = glob.glob('/data2/wei/vox-lm/GT/*')\n",
     "for p_id in all_id:\n",
-    "    flow_78 = glob.glob(p_id + '/*/flow_80.npy')\n",
+    "    flow_78 = glob.glob(p_id + '/*/flow.npy')\n",
     "    rand= random.random()\n",
     "    for seq in flow_78:\n",
     "        p_id = p_id.split('/')[-1]\n",
     "        p_seq = seq.split('/')[-2]\n",
     "        if(rand>0.1):\n",
     "            \n",
-    "            with open('vox_320_train.txt','a+') as f:\n",
-    "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')\n",
+    "            with open('vox_lm_train.txt','a+') as f:\n",
+    "                f.write(p_id+'/'+p_seq + ' 7 (160,160,3)\\r\\n')\n",
     "        else:    \n",
-    "            with open('vox_320_test.txt','a+') as f:\n",
-    "                f.write(p_id+'/'+p_seq + ' 7 (320,320,3)\\r\\n')"
+    "            with open('vox_lm_test.txt','a+') as f:\n",
+    "                f.write(p_id+'/'+p_seq + ' 7 (160,160,3)\\r\\n')"
    ]
   },
   {
