--- a/basicsr/data/Untitled.ipynb
+++ b/basicsr/data/Untitled.ipynb
@@ -2,6 +2,197 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
+    "from torch.nn import Linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class fc(nn.Module):\n",
+    "    \n",
+    "    def __init__(self,in_feature=10,out_feature=2):\n",
+    "        super(fc,self).__init__()\n",
+    "        self.in_feature = in_feature\n",
+    "        self.out_feature = out_feature\n",
+    "        self.fc = Linear(512,10)\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        return self.fc(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = fc(512,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.randn(10,512)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = torch.ones(10,dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 10])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.reshape(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = loss(out,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = torch.randn(3, 5, requires_grad=True)\n",
+    "target = torch.empty(3, dtype=torch.long).random_(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 5])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[ 0.0106,  0.0157,  0.0222,  ...,  0.0197,  0.0103,  0.0405],\n",
+       "        [-0.0289, -0.0404,  0.0314,  ..., -0.0266, -0.0211,  0.0264],\n",
+       "        [-0.0006, -0.0077,  0.0390,  ..., -0.0407,  0.0345,  0.0363],\n",
+       "        ...,\n",
+       "        [-0.0410, -0.0076, -0.0133,  ...,  0.0204, -0.0298, -0.0156],\n",
+       "        [-0.0354, -0.0373,  0.0092,  ..., -0.0190, -0.0045, -0.0042],\n",
+       "        [-0.0214,  0.0415,  0.0132,  ..., -0.0163,  0.0175, -0.0097]],\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fc.weight"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
