--- a/basicsr/data/meta_info/vox-312.ipynb
+++ b/basicsr/data/meta_info/vox-312.ipynb
@@ -2,12 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
@@ -45,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,10 +57,10 @@
     "        p_seq = seq.split('/')[-2]\n",
     "        if(rand>0.1):\n",
     "            \n",
-    "            with open('vox_lm_train.txt','a+') as f:\n",
+    "            with open('vox_1100_train.txt','a+') as f:\n",
     "                f.write(p_id+'/'+p_seq + ' 7 (160,160,3)\\r\\n')\n",
     "        else:    \n",
-    "            with open('vox_lm_test.txt','a+') as f:\n",
+    "            with open('vox_1100_test.txt','a+') as f:\n",
     "                f.write(p_id+'/'+p_seq + ' 7 (160,160,3)\\r\\n')"
    ]
   },
@@ -104,6 +100,21 @@
    ],
    "source": [
     "len(all_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('vox_1100_ijb_train.txt','a+') as f:\n",
+    "#     with open('vox_1100_train.txt','r') as v:\n",
+    "#         for lines in v:\n",
+    "#             f.write(lines)\n",
+    "    with open('vox_ijb_train_ijb.txt','r') as v:\n",
+    "        for lines in v:\n",
+    "            f.write(lines)      "
    ]
   },
   {
