--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -66,22 +66,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "fc_weight = np.load('fc_weights/weight.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([5., 5.])"
+       "(512, 23993)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.sum(a*b,1)"
+    "np.transpose(fc_weight,[1,0]).shape"
    ]
   },
   {
