--- a/basicsr/models/archs/Untitled.ipynb
+++ b/basicsr/models/archs/Untitled.ipynb
@@ -118,58 +118,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = np.ones(10).reshape(10,1)\n",
+    "q = np.ones(5).reshape(1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.ones(10,1)\n",
+    "b = torch.ones(1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.01597561],\n",
-       "        [0.64425098],\n",
-       "        [0.17915364]],\n",
-       "\n",
-       "       [[0.52408952],\n",
-       "        [0.22101032],\n",
-       "        [0.872804  ]],\n",
-       "\n",
-       "       [[0.12944336],\n",
-       "        [0.95019055],\n",
-       "        [0.38425907]],\n",
-       "\n",
-       "       [[0.66262946],\n",
-       "        [0.36141646],\n",
-       "        [0.05841169]],\n",
-       "\n",
-       "       [[0.89354701],\n",
-       "        [0.73788645],\n",
-       "        [0.41238656]]])"
+       "tensor([[1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1]], dtype=torch.uint8)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = torch.rand(2,3,40,40)"
+    "torch.eq(a,b)"
    ]
   },
   {
